syntax = "proto3";

package Nebula.Services.Fragments.HR;

import "google/api/annotations.proto";
import "Protos/Nebula/Services/Fragments/HR/EmployeeRecord.proto";
import "Protos/Nebula/Services/Fragments/HR/PayrollRecord.proto";
import "Protos/Nebula/Services/Fragments/HR/TimesheetRecord.proto";
import "google/protobuf/timestamp.proto";

service HRInterface {
  rpc GetEmployees (GetEmployeesRequest) returns (GetEmployeesResponse) {
    option (google.api.http) = {
      get: "/api/v1/hr/{OrganizationId}/employees"
    };
  }

  rpc GetEmployeeById (GetEmployeeByIdRequest) returns (GetEmployeeByIdResponse) {
    option (google.api.http) = {
      get: "/api/v1/hr/{OrganizationId}/employees/{EmployeeId}"
    };
  }

  rpc CreateEmployee (CreateEmployeeRequest) returns (HRMutationResponse) {
    option (google.api.http) = {
      post: "/api/v1/hr/employees"
      body: "*"
    };
  }

  rpc UpdateEmployee (UpdateEmployeeRequest) returns (HRMutationResponse) {
    option (google.api.http) = {
      put: "/api/v1/hr/employees/{EmployeeId}"
      body: "*"
    };
  }

  rpc TerminateEmployee (TerminateEmployeeRequest) returns (HRMutationResponse) {
    option (google.api.http) = {
      post: "/api/v1/hr/employees/{EmployeeId}/terminate"
      body: "*"
    };
  }

  rpc DeleteEmployee (DeleteEmployeeRequest) returns (HRMutationResponse) {
    option (google.api.http) = {
      delete: "/api/v1/hr/{OrganizationId}/employees/{EmployeeId}"
    };
  }

  rpc GetPayrollsByEmployee (GetPayrollsByEmployeeRequest) returns (GetPayrollsResponse) {
    option (google.api.http) = {
      get: "/api/v1/hr/{OrganizationId}/employees/{EmployeeId}/payroll"
    };
  }

  rpc ListPayrolls (ListPayrollsRequest) returns (GetPayrollsResponse) {
    option (google.api.http) = {
      get: "/api/v1/hr/{OrganizationId}/employees/payroll"
    };
  }

  rpc CreatePayroll (CreatePayrollRequest) returns (CreatePayrollResponse) {
    option (google.api.http) = {
      post: "/api/v1/hr/payroll"
      body: "*"
    };
  }

  rpc GetTimesheetsByEmployee (GetTimesheetsByEmployeeRequest) returns (GetTimesheetsResponse) {
    option (google.api.http) = {
      get: "/api/v1/hr/{OrganizationId}/employees/{EmployeeId}/timesheet"
    };
  }

  rpc ListTimesheets (ListTimesheetsRequest) returns (GetTimesheetsResponse) {
    option (google.api.http) = {
      get: "/api/v1/hr/{OrganizationId}/employees/timesheet"
    };
  }

  rpc LogTimesheet (LogTimesheetRequest) returns (LogTimesheetResponse) {
    option (google.api.http) = {
      post: "/api/v1/hr/timesheet"
      body: "*"
    };
  }
}

message GetEmployeesRequest {
  string OrganizationId = 1;
}

message GetEmployeesResponse {
  string Error = 1;
  repeated Nebula.Services.Fragments.HR.EmployeeRecord Records = 2;
}

message GetEmployeeByIdRequest {
  string OrganizationId = 1;
  string EmployeeId = 2;
}

message GetEmployeeByIdResponse {
  string Error = 1;
  Nebula.Services.Fragments.HR.EmployeeRecord Record = 2;
}

message TerminateEmployeeRequest {
  string OrganizationId = 1;
  string EmployeeId = 2;
  string Reason = 3;
}

message DeleteEmployeeRequest {
  string OrganizationId = 1;
  string EmployeeId = 2;
}

message GetPayrollsByEmployeeRequest {
  string OrganizationId = 1;
  string EmployeeId = 2;
}

message ListPayrollsRequest {
  string OrganizationId = 1;
}

message GetPayrollsResponse {
  string Error = 1;
  repeated Nebula.Services.Fragments.HR.PayrollRecord Records = 2;
}

message CreatePayrollRequest {
  string OrganizationId = 1;
  string EmployeeId = 2;
  string PayPeriod = 3;
  double GrossPay = 4;
  double Deductions = 5;
double NetPay = 6;
string Notes = 7;
}

message CreatePayrollResponse {
    string Error = 1;
 Nebula.Services.Fragments.HR.PayrollRecord Record = 2;    
}

message LogTimesheetRequest {
    string OrgaizationId = 1;
    string EmployeeId = 2;
    google.protobuf.Timestamp ClockIn = 3;
    google.protobuf.Timestamp ClockOut = 4;
    string Notes = 5;
}

message LogTimesheetResponse {
    string Error = 1;
    Nebula.Services.Fragments.HR.TimesheetRecord Record = 2;
}

message GetTimesheetsByEmployeeRequest {
  string OrganizationId = 1;
  string EmployeeId = 2;
}

message ListTimesheetsRequest {
  string OrganizationId = 1;
}

message GetTimesheetsResponse {
  string Error = 1;
  repeated Nebula.Services.Fragments.HR.TimesheetRecord Records = 2;
}

message CreateEmployeeRequest {
    string OrganizationId = 1;
    string FirstName = 2;
    string LastName = 3;
    string Email = 4;
    string Phone = 5;
    string JobTitle = 6;
    string Department = 7;
    google.protobuf.Timestamp StartUTC = 8;
    google.protobuf.Timestamp EndUTC = 9;
    string ManagerId = 10;
}

message UpdateEmployeeRequest {
    Nebula.Services.Fragments.HR.EmployeeRecord Record = 1;
}

message HRMutationResponse {
  string Error = 1;
  bool Success = 2;
}
